--- a/obs/basic/profiles/Twitch/basic.ini
+++ b/obs/basic/profiles/Twitch/basic.ini
@@ -28,3 +28,10 @@ FFVEncoder=
 FFAEncoderId=0
 FFAEncoder=
 FFAudioMixes=1
+
+[Twitch]
+AddonChoice=3
+
+[Audio]
+MonitoringDeviceName=Default
+MonitoringDeviceId=default
