Lots of updates

--- a/obs/basic/profiles/Twitch/basic.ini
+++ b/obs/basic/profiles/Twitch/basic.ini
@@ -6,32 +6,56 @@ BaseCX=1920
 BaseCY=1080
 OutputCX=1920
 OutputCY=1080
+FPSCommon=30
+ColorRange=Full
 
 [Panels]
 CookieId=46A8BD4EA683A21A
 
 [Output]
-Mode=Simple
+Mode=Advanced
 
 [SimpleOutput]
-FilePath=/home/mrdon/Videos
+FilePath=/home/mrdon/Videos/browser-tests
+RecQuality=Small
+RecFormat=mkv
 
 [AdvOut]
 TrackIndex=1
-RecType=Standard
-RecTracks=1
+RecType=FFmpeg
+RecTracks=2
 FFOutputToFile=true
-FFFormat=
+FFFormat=mov
 FFFormatMimeType=
-FFVEncoderId=0
-FFVEncoder=
-FFAEncoderId=0
-FFAEncoder=
-FFAudioMixes=1
+FFVEncoderId=173
+FFVEncoder=nvenc_hevc
+FFAEncoderId=86018
+FFAEncoder=aac
+FFAudioMixes=14
+FLVTrack=1
+RescaleRes=1920x1080
+RecRescaleRes=1920x1080
+FFRescaleRes=1920x1080
+RecFilePath=/home/mrdon/Videos
+VodTrackIndex=2
+Encoder=ffmpeg_nvenc
+FFFilePath=/home/mrdon/Videos
+FFVBitrate=30000
+FFVGOPSize=300
+FFRescale=false
+FFIgnoreCompat=false
+FFExtension=mov
+FFABitrate=320
 
 [Twitch]
 AddonChoice=3
 
 [Audio]
-MonitoringDeviceName=Default
-MonitoringDeviceId=default
+MonitoringDeviceName=Monitor of USB PnP Sound Device Analog Stereo
+MonitoringDeviceId=alsa_output.usb-C-Media_Electronics_Inc._USB_PnP_Sound_Device-00.analog-stereo.monitor
+
+[Hotkeys]
+OBSBasic.StartRecording={\n    "bindings": []\n}
+OBSBasic.StopRecording={\n    "bindings": []\n}
+next_scene.trigger={\n    "bindings": [\n        {\n            "key": "OBS_KEY_PERIOD"\n        }\n    ]\n}
+prev_scene.trigger={\n    "bindings": [\n        {\n            "key": "OBS_KEY_F5"\n        }\n    ]\n}
