--- a/obs/basic/profiles/demos/basic.ini
+++ b/obs/basic/profiles/demos/basic.ini
@@ -2,16 +2,16 @@
 Name=demos
 
 [Video]
-BaseCX=1920
-BaseCY=1080
-OutputCX=1280
-OutputCY=720
+BaseCX=2560
+BaseCY=1440
+OutputCX=2560
+OutputCY=1440
 
 [Panels]
 CookieId=E1C83E4670E97916
 
 [Output]
-Mode=Simple
+Mode=Advanced
 
 [SimpleOutput]
 FilePath=/home/mrdon/Videos
@@ -28,3 +28,14 @@ FFVEncoder=
 FFAEncoderId=0
 FFAEncoder=
 FFAudioMixes=1
+RescaleRes=1920x1080
+RecFilePath=/home/mrdon/Videos
+RecEncoder=ffmpeg_nvenc
+RecRescaleRes=1920x1080
+FLVTrack=1
+FFRescaleRes=1920x1080
+VodTrackIndex=2
+Encoder=ffmpeg_nvenc
+
+[Twitch]
+AddonChoice=3
