--- a/obs/plugin_config/rtmp-services/package.json
+++ b/obs/plugin_config/rtmp-services/package.json
@@ -1,10 +1,1 @@
-{
-	"url": "https://obsproject.com/obs2_update/rtmp-services",
-	"version": 132,
-	"files": [
-		{
-			"name": "services.json",
-			"version": 132
-		}
-	]
-}
+{"url":"https://obsproject.com/obs2_update/rtmp-services","version":170,"files":[{"name":"services.json","version":170}]}
