--- a/obs/basic/profiles/Twitch/basic.ini
+++ b/obs/basic/profiles/Twitch/basic.ini
@@ -59,3 +59,13 @@ OBSBasic.StartRecording={\n    "bindings": []\n}
 OBSBasic.StopRecording={\n    "bindings": []\n}
 next_scene.trigger={\n    "bindings": [\n        {\n            "key": "OBS_KEY_PERIOD"\n        }\n    ]\n}
 prev_scene.trigger={\n    "bindings": [\n        {\n            "key": "OBS_KEY_F5"\n        }\n    ]\n}
+
+[WebsocketAPI]
+ServerEnabled=true
+ServerPort=4444
+LockToIPv4=false
+DebugEnabled=false
+AlertsEnabled=true
+AuthRequired=true
+AuthSecret=MJswZ+KHPsUabQiVj1NbcK1BycYOufHg4bBIVnBInDo=
+AuthSalt=OES0UoV4KJqpyZ7gnGOSDffnAcsqnNrFYxXFTTz54Kg=
