Improvements to director
* Add bot that supports mod-provided quotes
* New makefile
* New webapp

--- a/obs/basic/profiles/Twitch/basic.ini
+++ b/obs/basic/profiles/Twitch/basic.ini
@@ -31,7 +31,7 @@ FFVEncoderId=173
 FFVEncoder=nvenc_hevc
 FFAEncoderId=86018
 FFAEncoder=aac
-FFAudioMixes=14
+FFAudioMixes=15
 FLVTrack=1
 RescaleRes=1920x1080
 RecRescaleRes=1920x1080
@@ -51,8 +51,8 @@ FFABitrate=320
 AddonChoice=3
 
 [Audio]
-MonitoringDeviceName=Monitor of USB PnP Sound Device Analog Stereo
-MonitoringDeviceId=alsa_output.usb-C-Media_Electronics_Inc._USB_PnP_Sound_Device-00.analog-stereo.monitor
+MonitoringDeviceName=Default
+MonitoringDeviceId=default
 
 [Hotkeys]
 OBSBasic.StartRecording={\n    "bindings": []\n}
