--- a/obs/plugin_config/rtmp-services/package.json
+++ b/obs/plugin_config/rtmp-services/package.json
@@ -1,1 +1,10 @@
-{"url":"https://obsproject.com/obs2_update/rtmp-services","version":170,"files":[{"name":"services.json","version":170}]}
+{
+	"url": "https://obsproject.com/obs2_update/rtmp-services",
+	"version": 171,
+	"files": [
+		{
+			"name": "services.json",
+			"version": 171
+		}
+	]
+}
