--- a/director/requirements.txt
+++ b/director/requirements.txt
@@ -7,7 +7,9 @@
 aiofiles==0.6.0
     # via quart
 aiohttp==3.7.4.post0
-    # via twitchio
+    # via
+    #   twitchio
+    #   wled
 appdirs==1.4.4
     # via black
 aspy.refactor-imports==2.2.0
@@ -20,6 +22,8 @@ attrs==20.3.0
     # via
     #   aiohttp
     #   pytest
+backoff==1.10.0
+    # via wled
 black==20.8b1
     # via -r requirements.in
 blinker==1.4
@@ -65,7 +69,9 @@ mypy-extensions==0.4.3
 obs-websocket-py==0.5.3
     # via -r requirements.in
 packaging==20.9
-    # via pytest
+    # via
+    #   pytest
+    #   wled
 pathspec==0.8.1
     # via black
 pluggy==0.13.1
@@ -77,6 +83,8 @@ py==1.10.0
 pyparsing==2.4.7
     # via packaging
 pytest==6.2.2
+    # via -r requirements.in
+python-dotenv==0.17.0
     # via -r requirements.in
 quart==0.14.1
     # via -r requirements.in
@@ -108,7 +116,11 @@ websockets==8.1
     # via twitchio
 werkzeug==1.0.1
     # via quart
+wled==0.4.4
+    # via -r requirements.in
 wsproto==1.0.0
     # via hypercorn
 yarl==1.6.3
-    # via aiohttp
+    # via
+    #   aiohttp
+    #   wled
