More clicker drafts, updated schedule

--- a/schedule/schedule.yaml
+++ b/schedule/schedule.yaml
@@ -111,4 +111,110 @@ schedule:
           byline: "Share in chat and use '$quote'"
     - start: "2021-11-11T15:00"
       title: "[Python] Discord, Twitch, and Gnome automation"
+    - start: "2021-11-16T16:00"
+      title: "Why GraphQL is the next SOAP (it's a good thing!)"
+      sections:
+        - title: "Why GraphQL is the next SOAP (it's a good thing!)"
+          byline: "That's right - a GOOD thing!"
+        - title: "What problem are we trying to solve?"
+          byline: "And no, it isn't to fund consultancies"
+        - title: "What is SOAP?"
+          byline: "A (very) brief history of SOAP"
+        - title: "What did SOAP get right?"
+          byline: "Other than that catchy name"
+        - title: "1. Text-based"
+          byline: "Easily debuggable, can roll by hand"
+        - title: "2. Structured content"
+          byline: "Envelope -> [Header, Body, Fault]"
+        - title: "3. Extensible"
+          byline: "For its faults, XML is as it says, extensible"
+        - title: "4. HTTP-friendly"
+          byline: "Works with firewalls, which we take for granted now"
+        - title: "5. Self-describing"
+          byline: "Discover what endpoints and what they take automatically"
+        - title: "Ok, so why did SOAP fail?"
+          byline: "How much time you got? :)"
+        - title: "'REST' is better in every way, right?"
+          byline: "What even is REST?"
+        - title: "GraphQL is the spiritual successor of SOAP"
+          byline: "Everything you want, nothing you don't"
+        - title: "1. Text-based"
+          byline: "Yup, test with curl or wget"
+        - title: "2. Structured content"
+          byline: "HTTP headers, query, mutations, errors"
+        - title: "3. Extensible"
+          byline: "Use headers to layer, directives to extend"
+        - title: "4. HTTP-friendly"
+          byline: "Yup, and this time, HTTP only"
+        - title: "5. Self-describing"
+          byline: "Introspection, validation, even built-in playground"
+        - title: "Why GraphQL is even better"
+          byline: "The apprentice has become the master"
+        - title: "1. No more XML!"
+          byline: "Ok, this is an easy one"
+        - title: "2. Batching by default"
+          byline: "Request only what you want"
+        - title: "3. Observability dream"
+          byline: "Know what fields and even arguments are used"
+        - title: "4. Eliminate N+1 queries"
+          byline: "Get a book, its authors, and their books"
+        - title: "5. Just enough specification"
+          byline: "SOAP was too much, REST too little, GraphQL just right"
+        - title: "Getting started resources"
+          byline: "It isn't hard, really"
+        - title: "Conclusions"
+          byline: "Learn from the past, but do better"
+        - title: "Questions?"
+          byline: "Let's talk more about how awesome SOAP was" 
+
+    - start: "2021-11-18T15:00"
+      title: "[Python] Startup coding"
+    - start: "2021-11-23T15:00"
+      title: "Continuous Deployment checklist"
+      sections:
+        - title: "What is Continuous Deployment?"
+          byline: "... and why is it super awesome?"
+        - title: "Why a checklist?"
+          byline: "Sadly, Continuous Deployment isn't for everyone"
+        - title: "Let's group this"
+          byline: "Must have, nice to have, and superstar level"
+        - title: "Group 1 - Must haves"
+          byline: "Don't leave home without 'it'"
+        - title: "[ ] The right-sized team"
+          byline: "Too big? Try release trains instead"
+        - title: "[ ] Automated, e2e testing"
+          byline: "Think Selenium, Cypress, or Cucumber"
+        - title: "[ ] Dev access to prod metrics"
+          byline: "Devs need to understand the impact of their change"
+        - title: "[ ] Automated, dev-driven deployment"
+          byline: "Um, ok, this is a gimme"
+        - title: "[ ] Super fast rollbacks"
+          byline: "Often different than normal deployments"
+        - title: "[ ] Feature flags"
+          byline: "Separate code deployment and feature enabling"
+        - title: "Group 2 - Nice to haves"
+          byline: "You probably want these"
+        - title: "[ ] Devs on-call"
+          byline: "At least business hours on-call"
+        - title: "[ ] Read-only access to prod data sources"
+          byline: "Sometimes you just need to access the source"
+        - title: "[ ] Deployment tracking and metrics"
+          byline: "What deploys when *cough* Sleuth *cough*"
+        - title: "[ ] Canary deployments"
+          byline: "Minimize risk by rolling out in chunks"
+        - title: "[ ] Developers own the deployment pipeline"
+          byline: "Close the loop"
+        - title: "Group 3: Superstar features"
+          byline: "CD in style, baby"
+        - title: "[ ] Automated rollbacks"
+          byline: "Fully automate health tracking and response"
+        - title: "[ ] Geo-aware deployment pipelines"
+          byline: "Update regions that are sleeping first"
+        - title: "[ ] Automated, conditional pipelines"
+          byline: "Automatically adjust flow based on the type of change"
+        - title: "What did I miss?"
+          byline: "What would you recommend for a new team trying CD?"
+    - start: "2021-11-25T15:00"
+      title: "[Python] Startup coding"
+
 
