--- a/schedule/schedule.yaml
+++ b/schedule/schedule.yaml
@@ -186,24 +186,30 @@ schedule:
           byline: "Think Selenium, Cypress, or Cucumber"
         - title: "[ ] Dev access to prod metrics"
           byline: "Devs need to understand the impact of their change"
+        - title: "[ ] Deployment tracking"
+          byline: "What deploys when *cough* Sleuth *cough*"
         - title: "[ ] Automated, dev-driven deployment"
           byline: "Um, ok, this is a gimme"
         - title: "[ ] Super fast rollbacks"
           byline: "Often different than normal deployments"
         - title: "[ ] Feature flags"
           byline: "Separate code deployment and feature enabling"
+        - title: "What'd I miss?"
+          byline: "Any other must haves in your experience?"
         - title: "Group 2 - Nice to haves"
           byline: "You probably want these"
         - title: "[ ] Devs on-call"
           byline: "At least business hours on-call"
         - title: "[ ] Read-only access to prod data sources"
           byline: "Sometimes you just need to access the source"
-        - title: "[ ] Deployment tracking and metrics"
-          byline: "What deploys when *cough* Sleuth *cough*"
+        - title: "[ ] Delivery metrics like DORA"
+          byline: "Surprise! Sleuth again :)"
         - title: "[ ] Canary deployments"
           byline: "Minimize risk by rolling out in chunks"
         - title: "[ ] Developers own the deployment pipeline"
           byline: "Close the loop"
+        - title: "What'd I miss?"
+          byline: "Any other nice-to-haves in your experience?"
         - title: "Group 3: Superstar features"
           byline: "CD in style, baby"
         - title: "[ ] Automated rollbacks"
@@ -212,9 +218,33 @@ schedule:
           byline: "Update regions that are sleeping first"
         - title: "[ ] Automated, conditional pipelines"
           byline: "Automatically adjust flow based on the type of change"
-        - title: "What did I miss?"
-          byline: "What would you recommend for a new team trying CD?"
-    - start: "2021-11-25T15:00"
+        - title: "What'd I miss?"
+          byline: "Any other superstar prereqs in your experience?"
+        - title: "Your turn"
+          byline: "Is CD worth it? What is your story?"
+    - start: "2021-11-30T15:00"
+      title: "New presentation studio testing, feedback needed!"
+      sections:
+        - title: "Your turn"
+          byline: "Is CD worth it? What is your story?"
+    - start: "2021-12-02T15:00"
+      title: "[Python] Startup coding"
+    - start: "2021-12-07T15:00"
+      title: "Myths of software dev over 40 - tech talk/discussion"
+      sections:
+        - title: "Myths of software dev over 40"
+          byline: "Yes, there is life after 40"
+        - title: "#1 - Hard to get a job"
+          byline: "Blah"
+    - start: "2021-12-09T15:00"
+      title: "[Python] Startup coding"
+    - start: "2021-12-14T15:00"
+      title: "Discussion topic: TBD"
+    - start: "2021-12-16T15:00"
+      title: "[Python] Startup coding"
+    - start: "2021-12-21T15:00"
+      title: "Discussion topic: TBD"
+    - start: "2021-12-23T15:00"
       title: "[Python] Startup coding"
 
 
