--- a/schedule/schedule.yaml
+++ b/schedule/schedule.yaml
@@ -169,7 +169,7 @@ schedule:
 
     - start: "2021-11-18T15:00"
       title: "[Python] Startup coding"
-    - start: "2021-12-23T15:00"
+    - start: "2021-11-23T15:00"
       title: "Continuous Deployment checklist"
       sections:
         - title: "What is Continuous Deployment?"
@@ -231,11 +231,44 @@ schedule:
       title: "[Python] Startup coding"
     - start: "2021-12-07T15:00"
       title: "Myths of software dev over 40 - tech talk/discussion"
+      duration: 3h
       sections:
         - title: "Myths of software dev over 40"
           byline: "Yes, there is life after 40"
-        - title: "#1 - Hard to get a job"
-          byline: "Blah"
+        - title: "Who is this for?"
+          byline: "Not just us GenX 'boomers'"
+        - title: "Want to learn to code?"
+          byline: "Know what you are getting into"
+        - title: "New to coding?"
+          byline: "This is what awaits you :)"
+        - title: "Been coding a while?"
+          byline: "Old people unite!"
+        - title: "#1 - Programming is for the young"
+          byline: "Start with a softball..."
+        - title: "#2 - You lose time and energy"
+          byline: "Ok, this one is true"
+        - title: "#3 - Side projects get a lot harder"
+          byline: "The problem is knowing too much"
+        - title: "#4 - Too old to create a startup"
+          byline: "The average age is 45"
+        - title: "#5 - A 40+ dev is a failed dev"
+          byline: "Many paths to satisfaction"
+        - title: "#6 - Hard to get a new job"
+          byline: "Ageism is real"
+        - title: "#7 - New tech is worse"
+          byline: "Maybe, but the game changed"
+        - title: "#8 - Javascript is a mess"
+          byline: "Ok, this one is true :)"
+        - title: "#9 - Older devs are better at working remote"
+          byline: "Yes, but not always"
+        - title: "#10 - Older devs should be in management"
+          byline: "Management is a different career"
+        - title: "#11 - The best team is senior-only"
+          byline: "Need a mix for best results"
+        - title: "#12 - Over 40 is too late to get started"
+          byline: "Never too late"
+        - title: "What myths do you see or still hold?"
+          byline: "Let's hear it"
     - start: "2021-12-09T15:00"
       title: "[Python] Startup coding"
     - start: "2021-12-14T15:00"
