Renamed a few things

--- a/schedule/schedule.yaml
+++ b/schedule/schedule.yaml
@@ -272,11 +272,34 @@ schedule:
     - start: "2021-12-09T15:00"
       title: "[Python] Startup coding"
     - start: "2021-12-14T15:00"
-      title: "Discussion topic: TBD"
+      title: "CTO reacts to programming memes"
     - start: "2021-12-16T15:00"
       title: "[Python] Startup coding"
     - start: "2021-12-21T15:00"
-      title: "Discussion topic: TBD"
+      title: "Ask a (software) architect"
+      sections:
+        - title: "Ask a (software) architect"
+          byline: Bring it!
+        - title: "What even is a software architect?"
+          byline: "How does it differ from a principal dev?"
+        - title: "Should software architects code?"
+          byline: "We live in powerpoint!"
+        - title: "How does it differ from management?"
+          byline: "Which one is 'higher'?"
+        - title: "How does one become an architect?"
+          byline: "What does the career path look like"
+        - title: "How do I avoid being a software architect?"
+          byline: "It isn't for everyone"
+        - title: "Are certifications useful?"
+          byline: "If so, which ones?"
+        - title: "What does an architect do all day?"
+          byline: "Do we really live in powerpoint?"
+        - title: "When does an architect not make sense?"
+          byline: "Does my team need one?"
+        - title: "What types of architect are there?"
+          byline: "Solution, principal, chief, application..."
+        - title: "How much does it pay?"
+          byline: "Uh, this one is complicated"
     - start: "2021-12-23T15:00"
       title: "[Python] Startup coding"
 
